linuxmuster-webui7 (1.0.69-1) lmn7; urgency=medium 

  * Current snapshot build 318cea2e21ff71233e71b2e362263dde5c5ddaa0
   *     Added no students in printer module

 -- Andreas Till <andreas.till@netzint.de> Fri May 24 11:47:57 UTC 2019

linuxmuster-webui7 (1.0.68-1) lmn7; urgency=medium 

  * Current snapshot build 77da5f0b63537560f3fa68a23009e463862adbf7
   *     removed comments

 -- Andreas Till <andreas.till@netzint.de> Fri May 24 10:05:12 UTC 2019

linuxmuster-webui7 (1.0.67-1) lmn7; urgency=medium 

  * Current snapshot build 701d8e957a069bff7d22ef067ddbddf7919b394b
   *     improved error handling on bad encoding

 -- Andreas Till <andreas.till@netzint.de> Thu May 23 14:21:00 UTC 2019

linuxmuster-webui7 (1.0.66-1) lmn7; urgency=medium 

  * Current snapshot build 701d8e957a069bff7d22ef067ddbddf7919b394b
   *     improved error handling on bad encoding

 -- Andreas Till <andreas.till@netzint.de> Thu May 23 14:19:14 UTC 2019

linuxmuster-webui7 (1.0.65-1) lmn7; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Fri May 17 15:10:38 UTC 2019

linuxmuster-webui7 (1.0.64-1) lmn7; urgency=medium 

  * Current snapshot build d57ed5da0633680a1519689216e44122673dbadd

 -- Andreas Till <andreas.till@netzint.de> Wed Mai 8 12:29:33 UTC 2019

linuxmuster-webui7 (1.0.63-1) lmn7; urgency=medium 

  * Current snapshot build f0f8e984322d6c50018c40d4b8c8501f3680ff23
   *     build javascript

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 16:25:36 UTC 2019

linuxmuster-webui7 (1.0.62-1) UNRELEASED; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 17:14:40 UTC 2019

linuxmuster-webui7 (1.0.61-1) UNRELEASED; urgency=medium 

  * Current snapshot build 
   * 

 -- Andreas Till <andreas.till@netzint.de> Sat Mar 23 14:32:40 UTC 2019

linuxmuster-webui7 (1.0.60-1) UNRELEASED; urgency=medium 

  * Current snapshot build 7414283f811e179fd265bc30ddc945d7a6148fdd